--- a/AplikasiNapi/AplikasiNapi.csproj
+++ b/AplikasiNapi/AplikasiNapi.csproj
@@ -46,14 +46,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\LapasController.cs" />
+    <Compile Include="Controller\NarapidanaController.cs" />
+    <Compile Include="Controller\PetugasController.cs" />
+    <Compile Include="Controller\TamuController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Context\DbContext.cs" />
+    <Compile Include="Model\Entity\Lapas.cs" />
+    <Compile Include="Model\Entity\Tamu.cs" />
+    <Compile Include="Model\Entity\Narapidana.cs" />
+    <Compile Include="Model\Entity\Petugas.cs" />
+    <Compile Include="Model\Repository\LapasRepository.cs" />
+    <Compile Include="Model\Repository\NarapidanaRepository.cs" />
+    <Compile Include="Model\Repository\PetugasRepository.cs" />
+    <Compile Include="Model\Repository\TamuRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\FrmAplikasi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FrmAplikasi.Designer.cs">
+      <DependentUpon>FrmAplikasi.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\FrmAplikasi.resx">
+      <DependentUpon>FrmAplikasi.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -76,5 +98,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
